working on css for user show page

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-stars.png" %>)">
+<div class="bannerx"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-stars.png" %>)">
   <div class="clock">
   <div class="clock__second"></div>
   <div class="clock__minute"></div>
@@ -76,24 +76,22 @@
   </div>
 
 </div>
-
   <div class="cardx">
-    <div class="thumbnail"><img class="left" style="url(<%= asset_path "sunset.png" %>)"></div>
+    <div class="thumbnail"><img class="left" src="https://cdn2.hubspot.net/hubfs/322787/Mychefcom/images/BLOG/Header-Blog/photo-culinaire-pexels.jpg"/></div>
     <div class="right">
       <h1><%= (((@booking.end_time - @booking.start_time) / 60) / 60).round(2) %> Hours</h1>
       <div class="author"><img src="https://randomuser.me/api/portraits/men/95.jpg"/>
-        <h2><%= @booking.therapist.first_name %> <%= @booking.therapist.last_name %></h2>
+        <h4><%= @booking.therapist.first_name %> <%= @booking.therapist.last_name %></h4>
       </div>
       <div class="separator"></div>
       <p><%= @booking.description %></p>
       <strong>Status: <%= @booking.status %></strong>
     </div>
     <div class="bottom">
-     <h3><%= (@booking.start_time).strftime("%dth %B") %> </h3>
+     <h1><%= (@booking.start_time).strftime("%dth %B") %> </h1>
     <ul>
       <li><i class="far fa-edit"></i></li>
-<!--       <li><i class="fas fa-video fa-3x""></i></li>
- -->      <li><i class="far fa-registered"></i></li>
+      <li><i class="far fa-registered"></i></li>
       <li><i class="fas fa-book-reader"></i></i></li>
     </ul>
     <div class="fab"><i class="fas fa-video fa-3x""></i></div>
