--- a/app/assets/stylesheets/pages/_bookingsshow.scss
+++ b/app/assets/stylesheets/pages/_bookingsshow.scss
@@ -12,7 +12,14 @@
     text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
     padding-left: 50px;
 }
-
+.bannerx {
+  background-size: cover;
+  height: calc(40vh - 46px);
+  background-position: center;
+  display: flex;
+  align-items: center;
+  margin-top: 68px;
+}
 .big-box {
   display: flex;
   flex-direction: column;
@@ -24,7 +31,7 @@
 .bottom {
   display: flex;
   flex-direction: row;
-  margin-top: 100px;
+  margin-top: 60px;
   .btn-primary{
     width: 20%;
     padding: 10px;
