fixed footer placement code is inside application.html.erb (calc 100vh - 150px)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,10 @@
     <% end %>
 
     <%= render 'shared/flashes' %>
+  <div>
+    <div style="min-height: calc(100vh - 150px)">
     <%= yield %>
+  </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= yield :after_js %>
