--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,54 +1,49 @@
 <div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "female.jpg" %>)">
 </div>
 
-<div class="holding-container">
+<div class="therapist-card-container">
+  <div class="holding-container">
+    <div class="clipped-border" >
+      <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
+    </div>
 
-  <div class="clipped-border" >
-    <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
-  </div>
-
-    <div class="conatiner-ls">
-      <div class="container-description">
-        <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-        <h2><%= @user.address %></h2>
-        <%= @user.bio %>
-     </div>
-     <div id="map"
-      style="width: 70%;
-      height: 300px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      >
-      </div>
-      <br>
-          <h2><strong><%= @user.languages%></strong> </h2>
-      <div class="showbottom">
-        <div class="primary-button">Price</div>
-        <%= link_to "Book", new_user_booking_path(@user), class: "primary-button"%>
-      </div>
-  </div>
-
-
-  <div class="container-rs">
-    <div class="container-reviews">
-      <h2>Reviews</h2>
-      <% @reviews.each do |review| %>
-      <div class="card">
-        <p><%= review.client.first_name %><%= review.client.first_name %></p>
-        <%# review.client_id.photo.url %>
-        <%= review.description %>
-        <% counter = 0 %>
-        <% 5.times do %>
-          <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
-          <% counter += 1 %>
-         <% end %>
+      <div class="conatiner-ls">
+        <div class="container-description">
+          <h3><strong><%= @user.first_name %> <%= @user.last_name %></strong></h1>
+          <h4><%= @user.address %></h2>
+          <%= @user.bio %>
        </div>
-        <% end %>
+        <div class="showbottom">
+          <div class="primary-button">Price</div>
+          <%= link_to "Book", new_user_booking_path(@user), class: "primary-button"%>
+        </div>
+    </div>
+        <br>
+            <h2><strong><%= @user.languages%></strong> </h2>
+    <div class="container-rs">
+      <div class="container-reviews">
+        <h2>Reviews</h2>
+        <% @reviews.each do |review| %>
+        <div class="card">
+          <p><%= review.client.first_name %><%= review.client.first_name %></p>
+          <%# review.client_id.photo.url %>
+          <%= review.description %>
+          <% counter = 0 %>
+          <% 5.times do %>
+            <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
+            <% counter += 1 %>
+           <% end %>
+         </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-
 </div>
 
-
-
+  <div id="map" style="width: 70%;
+  height: 300px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  >
+  </div>
