--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,53 @@
-<div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "female.jpg" %>)">
+<div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-mountain.png" %>)">
 </div>
 
-<div class="therapist-card-container">
-  <div class="holding-container">
-    <div class="clipped-border" >
-      <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
+<div class="container">
+  <div class="user-show-container">
+    <div class="therapist-container">
+      <div class="user-show-therapist-name">
+        <h3><strong><%= @user.first_name %> <%= @user.last_name %></strong></h3>
+      </div>
+      <div class="user-show-therapist-address">
+        <h4><%= @user.address %></h4>
+      </div>
+      <div class="user-show-therapist-description">
+        <%= @user.bio %>
+      </div>
+      <div class="user-show-therapist-languages">
+        <h2><strong><%= @user.languages%></strong> </h2>
+      </div>
     </div>
 
-      <div class="conatiner-ls">
-        <div class="container-description">
-          <h3><strong><%= @user.first_name %> <%= @user.last_name %></strong></h1>
-          <h4><%= @user.address %></h2>
-          <%= @user.bio %>
-       </div>
-        <div class="showbottom">
-          <div class="primary-button">Price</div>
-          <%= link_to "Book", new_user_booking_path(@user), class: "primary-button"%>
+    <div class="therapist-reviews-container">
+      <div class="user-show-book-btn">
+        <%= link_to "Book", new_user_booking_path(@user), class: "primary-button-user-show"%>
+      </div>
+      <div class="container-rs">
+        <div class="container-reviews">
+          <h2>Reviews</h2>
+          <% @reviews.each do |review| %>
+          <div class="card">
+            <p><%= review.client.first_name %><%= review.client.first_name %></p>
+            <%# review.client_id.photo.url %>
+            <%= review.description %>
+            <% counter = 0 %>
+            <% 5.times do %>
+              <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
+              <% counter += 1 %>
+             <% end %>
+           </div>
+            <% end %>
+          </div>
         </div>
+
     </div>
-        <br>
-            <h2><strong><%= @user.languages%></strong> </h2>
-    <div class="container-rs">
-      <div class="container-reviews">
-        <h2>Reviews</h2>
-        <% @reviews.each do |review| %>
-        <div class="card">
-          <p><%= review.client.first_name %><%= review.client.first_name %></p>
-          <%# review.client_id.photo.url %>
-          <%= review.description %>
-          <% counter = 0 %>
-          <% 5.times do %>
-            <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
-            <% counter += 1 %>
-           <% end %>
-         </div>
-          <% end %>
-        </div>
+
+    <div class="map-container">
+      <div id="map" style="width: 70%;
+      height: 300px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
   </div>
 </div>
-
-  <div id="map" style="width: 70%;
-  height: 300px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  >
-  </div>
