users show page layout

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,3 +1,9 @@
+.banneri {
+  background-size: cover;
+  background-position: center;
+  height: 350px;
+}
+
 .user-show-container {
   display: flex;
   background-color: white;
@@ -30,16 +36,9 @@
         background-color: #74d5e0;
       }
     }
+    .container-reviews {
+    }
   }
-
-
-
-
-.banneri {
-  background-size: cover;
-  background-position: center;
-  height: 350px;
-}
 
 .primary-button-user-show {
   font-family: $body-font;
@@ -47,16 +46,10 @@
   background-color: #6ECAD6;
   border: none;
   color: white;
-  padding: 12px 16px;
+  padding: 12px 22px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   cursor: pointer;
-}
-.container-rs {
-  width: 100%;
-}
-.conatiner-ls {
-  width: 100%;
 }
